--- a/scratch_page_styles.css
+++ b/scratch_page_styles.css
@@ -75,6 +75,8 @@
     bottom: 200px;
     width: 180px;
     background-color: rgb(219, 201, 177);
+    text-align: center;
+    padding-right: 15px;
 }
 
 .body {
